--- a/waidh-fe/package.json
+++ b/waidh-fe/package.json
@@ -10,10 +10,14 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
   },
   "dependencies": {
-    "phaser": "^3.55.2"
+    "js-cookie": "^3.0.1",
+    "phaser": "^3.55.2",
+    "socket.io-client": "^4.5.1",
+    "uuid": "^8.3.2"
   }
 }
