--- a/waidh-fe/package.json
+++ b/waidh-fe/package.json
@@ -6,7 +6,7 @@
   "author": "Arix Phua",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "devDependencies": {
