--- a/waidh-be/package.json
+++ b/waidh-be/package.json
@@ -5,16 +5,18 @@
   "author": "Arix Phua",
   "license": "MIT",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\""
+    "dev": "nodemon --config nodemon.dev.json src/index.ts",
+    "build-win": "npx tsc && copy nodemon.prod.json dist",
+    "build-mac": "npx tsc && copy nodemon.prod.json dist",
+    "serve": "nodemon --config nodemon.prod.json dist/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
     "@types/uuid": "^8.3.4",
-    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
