--- a/waidh-be/package.json
+++ b/waidh-be/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.17.10"
   }
 }
