--- a/waidh-fe/package.json
+++ b/waidh-fe/package.json
@@ -19,6 +19,7 @@
     "js-cookie": "^3.0.1",
     "phaser": "^3.55.2",
     "socket.io-client": "^4.5.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.17.10"
   }
 }
