--- a/waidh-fe/package.json
+++ b/waidh-fe/package.json
@@ -11,6 +11,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/uuid": "^8.3.4",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
