--- a/waidh-be/package.json
+++ b/waidh-be/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev": "nodemon --config nodemon.dev.json src/index.ts",
     "build-win": "npx tsc && copy nodemon.prod.json dist",
-    "build-mac": "npx tsc && copy nodemon.prod.json dist",
-    "serve": "nodemon --config nodemon.prod.json dist/index.js"
+    "build-mac": "npx tsc && cp nodemon.prod.json dist",
+    "serve": "nodemon --config dist/nodemon.prod.json dist/index.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
